--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
   width: 100vw;
@@ -7,123 +6,298 @@
   box-sizing: border-box;
 }
 
-.step-symbols{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.step-symbols>p:nth-child(odd) {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 2.2s;
-  font-size: small;
-  font-weight: 700;
-  color:darkgray;
-}
-.step-symbols>p:nth-child(even) {
-  width: 50px;
-  height: 4px;
-  background: rgb(205, 199, 199);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.step-symbols>p:nth-child(even) p{
-  width: 50px;
-  height: 4px;
-  background: cyan;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 2s;
-  transform: scale(0);
-  transform-origin: left;
-}
-.register-root{
-  width:100%;
+
+.register-root {
+  width: 100%;
   height: 100%;
   display: grid;
   justify-content: center;
   align-items: center;
+
+  .form {
+    width: 350px;
+    height: 400px;
+    border: 2px solid red;
+    align-items: center;
+    display: grid;
+    position: relative;
+
+    &>.icon-control {
+      justify-content: center;
+      display: grid;
+      align-items: center;
+      text-align: center;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: 0;
+
+      i {
+        transform: rotate(90deg);
+        font-size: x-large;
+      }
+    }
+
+    .form-group {
+      display: grid;
+      justify-self: center;
+      align-items: center;
+      row-gap: 40px;
+
+      &.input-control {
+        &:nth-child(3) {
+
+          &.icon-control {
+            &:nth-child(4) {
+              position: absolute;
+              right: 0px;
+              border: none;
+            }
+          }
+        }
+      }
+
+      .input-control {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid;
+        position: relative;
+        height: 70px;
+
+        label {
+          position: absolute;
+          left: 40px;
+          background: white;
+          transition: all .5s ease-in-out;
+        }
+
+        input {
+          width: 18em;
+          height: 40px;
+
+          &:focus::placeholder {
+            transform: translateY(-20px);
+            font-size: .8em;
+            transition: all .5s;
+          }
+        }
+
+        .icon-control {
+          i {
+            font-size: 20px;
+            color: gray;
+          }
+
+        }
+
+        .icon-control {
+          justify-content: center;
+          display: grid;
+          align-items: center;
+          border: 2px solid;
+          text-align: center;
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
+  }
+    .step-symbols {
+      border: 2px solid;
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+      align-items: center;
+
+      &>p:nth-child(odd) {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 2.2s;
+        font-size: small;
+        font-weight: 700;
+        color: darkgray;
+      }
+
+      &>p:nth-child(even) {
+        width: 50px;
+        height: 4px;
+        background: rgb(205, 199, 199);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &>p:nth-child(even) {
+        p {
+          width: 50px;
+          height: 4px;
+          background: cyan;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: all 2s;
+          transform: scale(0);
+          transform-origin: left;
+        }
+      }
+    
+  }
 }
-.register-root h1{
-}
-.register-root .form{
-  width:350px;
-  height:400px;
-  border: 2px solid red;
-  align-items: center;
-  display: grid;
+
+.navbar-root{
   position: relative;
-}
-.register-root .step-symbols{
-  border: 2px solid;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.register-root .form .form-group{
+  width:99.7vw;
+  height: 100px;
+  margin:0;
   display: grid;
-  justify-self: center;
-  align-items: center;
-  row-gap: 40px;
+  place-items: center;
+  grid-auto-flow: column;
+  grid-template-areas: 'start center end';
+  border-bottom:2px solid rgb(192, 189, 189);
+  &>div{
+    border:2px solid;
+  }
+  .logo{
+    grid-area: start;
+    width:20vw;
+    display: grid;
+    place-items: center;
+    grid-auto-flow: column;
+
+    img{
+      margin:0;
+    }
+    p{
+      font-size: 2.6vw;
+      margin:0;
+
+    }
+  }
+  .links{
+    grid-area: center;
+    display: grid;
+    place-items: center;
+    grid-auto-flow: column;
+    width:50vw;
+    grid-template-columns: auto;
+    p{
+      font-weight: bold;
+      padding:5px;
+      position: relative;
+      &::before{
+        content:'';
+        width:70px;
+        padding:15px;
+        position: absolute;
+        left:-40%;
+        top:3px;
+        border-bottom: 5px solid cyan;
+        transform: scaleX(0);
+        transition: all .5s;
+        transform-origin: 0% 100%100%;
+      }
+      &:nth-child(3){
+        &::before{
+          left:-20%;
+        }
+      }
+      &:hover::before{
+        transform: scaleX(1);
+        cursor:default;
+
+      }
+    }
+  }
+  .profile{
+    grid-area: end;
+    width:20vw;
+    display: grid;
+    place-items: center;
+    grid-auto-flow: column;
+    button{
+      padding:10px;
+      background: rgb(55, 132, 240);
+      color:white;
+      text-transform: uppercase;
+      border:none;
+      outline:none;
+      border-radius: 20px;
+      width:80px;
+      font-weight: bold;
+      &:hover{
+        cursor:pointer;
+      }
+      &:nth-child(2){
+        &:hover{
+          background: none;
+          border:2px solid rgb(55, 132, 240);
+          color:black;
+        }
+      }
+      &:nth-child(3){
+        background:none;
+        color:black;
+        border:2px solid;
+        &:hover{
+          background: rgb(55, 132, 240);
+          border:none;
+          color:white;
+        }
+
+      }
+    }
+  }
+  .sidebar{
+    width: 300px;
+    position: absolute;
+    left:0;
+    top:100px;
+    background: white;
+    padding: 20px 0px;
+    .logo{
+      width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    column-gap: 20px;
+    margin-bottom:20px;
+    img{
+      margin:0;
+    }
+    p{
+      font-size: 20px;
+      margin:0;
+
+    }
+    }
+    &>p{
+      font-size:15px;
+      width:100%;
+      margin:0;
+      padding: 10px 0px;
+      &:hover{
+        background: gray;
+      }
+    }
+  }
 }
-.register-root .form .input-control{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid;
-  position: relative;
-  height: 70px;
-}
-.register-root .form .input-control label{
-  position: absolute;
-  left:40px;
-  background: white;
-  transition: all .5s ease-in-out;
-}
-  .register-root .form .input-control input{
-  width:18em;
-  height: 40px;
-}
-.register-root .form .input-control .icon-control i{
-  font-size: 20px;
-  color:gray;
-}
-.register-root .form>.icon-control{
-  justify-content: center;
-  display: grid;
-  align-items: center;
-  text-align: center;
-  width:40px;
-  height: 40px;
-  position: absolute;
-  top:0;
-}
-.register-root .form>.icon-control i{
-  transform: rotate(90deg);
-  font-size: x-large;
-}
-.register-root .form .form-group .input-control:nth-child(3) .icon-control:nth-child(4){
-  position: absolute;
-  right: 0px;
-  border: none;
-}
-.register-root .form .input-control .icon-control{
-  justify-content: center;
-  display: grid;
-  align-items: center;
-  border: 2px solid;
-  text-align: center;
-  width:40px;
-  height: 40px;
-}
-.register-root .form .input-control input:focus::placeholder{
-  transform: translateY(-20px);
-  font-size: .8em;
-  transition: all .5s;
+
+@media only screen and (max-width:600px) {
+  .navbar-root{
+    background: #ff0000;
+    border:2px solid;
+    .links{
+      display:none;
+    }
+    .profile{
+      grid-area: center;
+
+    }
+  }
 }
