--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -103,186 +103,206 @@
       }
     }
   }
-    .step-symbols {
-      border: 2px solid;
+
+  .step-symbols {
+    border: 2px solid;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+
+    &>p:nth-child(odd) {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
       display: flex;
       justify-content: center;
-      flex-direction: row;
       align-items: center;
+      transition: all 2.2s;
+      font-size: small;
+      font-weight: 700;
+      color: darkgray;
+    }
 
-      &>p:nth-child(odd) {
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: all 2.2s;
-        font-size: small;
-        font-weight: 700;
-        color: darkgray;
-      }
+    &>p:nth-child(even) {
+      width: 50px;
+      height: 4px;
+      background: rgb(205, 199, 199);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-      &>p:nth-child(even) {
+    &>p:nth-child(even) {
+      p {
         width: 50px;
         height: 4px;
-        background: rgb(205, 199, 199);
+        background: cyan;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: all 2s;
+        transform: scale(0);
+        transform-origin: left;
       }
+    }
 
-      &>p:nth-child(even) {
-        p {
-          width: 50px;
-          height: 4px;
-          background: cyan;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: all 2s;
-          transform: scale(0);
-          transform-origin: left;
-        }
-      }
-    
   }
 }
 
-.navbar-root{
+.navbar-root {
   position: relative;
-  width:99.7vw;
+  width: 99.7vw;
   height: 100px;
-  margin:0;
+  margin: 0;
   display: grid;
   place-items: center;
   grid-auto-flow: column;
   grid-template-areas: 'start center end';
-  border-bottom:2px solid rgb(192, 189, 189);
-  &>.icon-control{
+  border-bottom: 2px solid rgb(192, 189, 189);
+
+  &>.icon-control {
     display: none;
   }
-  .logo{
+
+  .logo {
     grid-area: start;
-    width:20vw;
+    width: 20vw;
     display: grid;
     place-items: center;
     grid-auto-flow: column;
 
-    img{
-      margin:0;
+    img {
+      margin: 0;
     }
-    p{
+
+    p {
       font-size: 2.6vw;
-      margin:0;
+      margin: 0;
 
     }
   }
-  .links{
+
+  .links {
     grid-area: center;
     display: grid;
     place-items: center;
     grid-auto-flow: column;
-    width:50vw;
+    width: 50vw;
     grid-template-columns: auto;
-    p{
+
+    p {
       font-weight: bold;
-      padding:5px;
+      padding: 5px;
       position: relative;
-      &::before{
-        content:'';
-        width:70px;
-        padding:15px;
+
+      &::before {
+        content: '';
+        width: 70px;
+        padding: 15px;
         position: absolute;
-        left:-40%;
-        top:3px;
+        left: -40%;
+        top: 3px;
         border-bottom: 5px solid cyan;
         transform: scaleX(0);
         transition: all .5s;
         transform-origin: 0% 100%100%;
       }
-      &:nth-child(3){
-        &::before{
-          left:-20%;
+
+      &:nth-child(3) {
+        &::before {
+          left: -20%;
         }
       }
-      &:hover::before{
+
+      &:hover::before {
         transform: scaleX(1);
-        cursor:default;
+        cursor: default;
 
       }
     }
   }
-  .profile{
+
+  .profile {
     grid-area: end;
-    width:20vw;
+    width: 20vw;
     display: grid;
     place-items: center;
     grid-auto-flow: column;
-    button{
-      padding:10px;
+
+    button {
+      padding: 10px;
       background: rgb(55, 132, 240);
-      color:white;
+      color: white;
       text-transform: uppercase;
-      border:none;
-      outline:none;
+      border: none;
+      outline: none;
       border-radius: 20px;
-      width:80px;
+      width: 80px;
       font-weight: bold;
-      &:hover{
-        cursor:pointer;
+
+      &:hover {
+        cursor: pointer;
       }
-      &:nth-child(2){
-        &:hover{
+
+      &:nth-child(2) {
+        &:hover {
           background: none;
-          border:2px solid rgb(55, 132, 240);
-          color:black;
+          border: 2px solid rgb(55, 132, 240);
+          color: black;
         }
       }
-      &:nth-child(3){
-        background:none;
-        color:black;
-        border:2px solid;
-        &:hover{
+
+      &:nth-child(3) {
+        background: none;
+        color: black;
+        border: 2px solid;
+
+        &:hover {
           background: rgb(55, 132, 240);
-          border:none;
-          color:white;
+          border: none;
+          color: white;
         }
 
       }
     }
   }
-  .sidebar{
+
+  .sidebar {
     width: 300px;
     position: absolute;
-    left:0;
-    top:100px;
+    left: 0;
+    top: 100px;
     background: green;
     padding: 20px 0px;
 
-    .logo{
-      width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    column-gap: 20px;
-    margin-bottom:20px;
-    img{
-      margin:0;
-    }
-    p{
-      font-size: 20px;
-      margin:0;
+    .logo {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      column-gap: 20px;
+      margin-bottom: 20px;
 
+      img {
+        margin: 0;
+      }
+
+      p {
+        font-size: 20px;
+        margin: 0;
+
+      }
     }
-    }
-    &>p{
-      font-size:15px;
-      width:100%;
-      margin:0;
+
+    &>p {
+      font-size: 15px;
+      width: 100%;
+      margin: 0;
       padding: 10px 0px;
-      &:hover{
+
+      &:hover {
         background: gray;
       }
     }
@@ -290,44 +310,171 @@
 }
 
 @media only screen and (max-width:600px) {
-  .navbar-root{
-    &>.icon-control{
+  .navbar-root {
+    &>.icon-control {
       display: grid;
       place-items: center;
-      grid-auto-flow: column;
-      border: 2px solid;
-      width:50px;
+      width: 50px;
       height: 50px;
       padding: 7px;
-      gap:0px;
-      p{
-        width:40px;
+      position: relative;
+      left: -20px;
+
+      .hamburger {
+        padding: 15px 15px;
+        display: inline-block;
+        cursor: pointer;
+        transition-property: opacity, filter;
+        transition-duration: 0.15s;
+        transition-timing-function: linear;
+        font: inherit;
+        color: inherit;
+        text-transform: none;
+        background-color: transparent;
+        border: 0;
+        margin: 0;
+        overflow: visible;
+      }
+
+      .hamburger:hover {
+        opacity: 0.7;
+      }
+
+      .hamburger.is-active:hover {
+        opacity: 0.7;
+      }
+
+      .hamburger.is-active .hamburger-inner,
+      .hamburger.is-active .hamburger-inner::before,
+      .hamburger.is-active .hamburger-inner::after {
+        background-color: #000;
+      }
+
+      .hamburger-box {
+        width: 40px;
+        height: 24px;
+        display: inline-block;
+        position: relative;
+      }
+
+      .hamburger-inner {
+        display: block;
+        top: 50%;
+        margin-top: -2px;
+      }
+
+      .hamburger-inner,
+      .hamburger-inner::before,
+      .hamburger-inner::after {
+        width: 40px;
+        height: 4px;
+        background-color: #000;
+        border-radius: 4px;
+        position: absolute;
+        transition-property: transform;
+        transition-duration: 0.15s;
+        transition-timing-function: ease;
+      }
+
+      .hamburger-inner::before,
+      .hamburger-inner::after {
+        content: "";
+        display: block;
+      }
+
+      .hamburger-inner::before {
+        top: -10px;
+      }
+
+      .hamburger-inner::after {
+        bottom: -10px;
+      }
+
+      .hamburger--elastic .hamburger-inner {
+        top: 2px;
+        transition-duration: 0.275s;
+        transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
+      .hamburger--elastic .hamburger-inner::before {
+        top: 10px;
+        transition: opacity 0.125s 0.275s ease;
+      }
+
+      .hamburger--elastic .hamburger-inner::after {
+        top: 20px;
+        transition: transform 0.275s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
+      .hamburger--elastic.is-active .hamburger-inner {
+        transform: translate3d(0, 10px, 0) rotate(135deg);
+        transition-delay: 0.075s;
+      }
+
+      .hamburger--elastic.is-active .hamburger-inner::before {
+        transition-delay: 0s;
+        opacity: 0;
+      }
+
+      .hamburger--elastic.is-active .hamburger-inner::after {
+        transform: translate3d(0, -20px, 0) rotate(-270deg);
+        transition-delay: 0.075s;
+      }
+
+      p {
+        width: 40px;
         height: 5px;
-        border:2px solid;
-        margin:7px 0px;
-        &:nth-child(1){
-          
+        margin: 7px 0px;
+        transform: rotate(45deg);
+        background: gray;
+        transform: all .5s;
+
+        &:nth-child(1) {
+          position: relative;
+          left: 22px;
+          top: 4px;
+          animation: lin1 2s linear infinite ease-in-out;
         }
-        &:nth-child(2){
-          background: green;
+
+        &:nth-child(2) {
+          width: 60px;
+
         }
-        &:nth-child(3){
-          background: yellow;
+
+        &:nth-child(3) {
+          position: relative;
+          left: -1px;
+
+        }
+      }
+
+      @keyframes lin1 {
+        from {
+          transform: rotate(45deg);
+        }
+
+        to {
+          visibility: hidden;
+          transform: translateX(50px) translateY(40px) rotate(45deg);
         }
       }
     }
-    .logo{
-      width:50vw;
+
+    .logo {
+      width: 50vw;
       grid-area: end;
-      p{
+
+      p {
         font-size: large;
       }
     }
-    .links{
-      display:none;
+
+    .links {
+      display: none;
     }
-    .profile{
-      display:none;
+
+    .profile {
+      display: none;
     }
   }
 }
