--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
+  overflow-x:hidden;
 }
 
 
@@ -310,8 +311,61 @@
   }
 }
 
+.about-root{
+  height: auto;
+  padding:20px;
+  margin:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  &>div{
+    display:flex;
+    &:nth-child(2){
+      column-gap: 100px;
+      padding:20px;
+      div{
+        img{
+          border-radius: 50%;
+          padding:20px;
+        }
+        p{
+          font-size:larger;
+        }
+        &:nth-child(1){
+          img{ border:4px solid red;}
+          p{
+            background:rgba(248, 71, 71,.23);
+            border-radius:20px;
+            padding:10px;
+            color:red;
+          }
+        }
+        &:nth-child(2){
+          img{ border:4px solid blue;}
+          p{
+            background:rgba(72, 72, 250,.23);
+            border-radius:20px;
+            padding:10px;
+            color:blue;
+          }
+        }
+        &:nth-child(3){
+          img{ border:4px solid green;}
+          p{
+            background:rgba(68, 215, 68,.23);
+            border-radius:20px;
+            padding:10px;
+            color:green;
+          }
+        }
+      }
+    }
+}
+}
+
 .home-root {
-  margin-top: 100px;
   height: auto;
   display: grid;
   place-items: center;
@@ -343,6 +397,7 @@
   }
 }
 
+
 .container {
   width: 500px;
   height: 500px;
@@ -353,6 +408,8 @@
   align-items: center;
   flex-direction: column;
   padding: 10px;
+  padding: 50px;
+  overflow: hidden;
 
   .cube {
     width: 300px;
@@ -404,8 +461,8 @@
       width: 250px;
       height: 250px;
       position: absolute;
-      border: 2px solid;
-      top: 10px;
+      border: 2px solid rgb(219, 219, 219);
+      top: 50px;
       transition: all .5s;
       background: rgba(68, 217, 254, .4);
       opacity: 0;
