--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -4,7 +4,7 @@
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
 
 
@@ -275,8 +275,11 @@
     position: absolute;
     left: 0;
     top: 100px;
-    background: green;
+    background: rgba(255, 255, 255, 0.83);
     padding: 20px 0px;
+    z-index: 10;
+    color: black;
+
 
     .logo {
       width: 100%;
@@ -304,65 +307,140 @@
       margin: 0;
       padding: 10px 0px;
 
+
       &:hover {
-        background: gray;
+        background: #e0e0e0;
+        box-shadow: 12px 12px 93px #7d7d7d,
+          -12px -12px 93px #ffffff;
       }
     }
   }
 }
 
-.about-root{
+.about-root {
   height: auto;
-  padding:20px;
-  margin:0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  
-  &>div{
-    display:flex;
-    &:nth-child(2){
+  padding: 20px;
+  margin: 0;
+  display: grid;
+  place-items: center;
+
+  &>div {
+    display: flex;
+
+    &:nth-child(1) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      h1 {
+        border-bottom: 3px solid rgb(23, 165, 241);
+        padding: 0px 20px;
+        color: rgb(101, 185, 234);
+        text-align: center;
+      }
+    }
+
+    &:nth-child(2) {
       column-gap: 100px;
-      padding:20px;
-      div{
-        img{
+      margin: 0;
+      display: grid;
+      place-items: center;
+      width: 100%;
+      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+
+      div {
+        position: relative;
+        display: grid;
+        place-items: center;
+        overflow: hidden;
+        width: max-content;
+        border: 2px solid rgb(212, 208, 208);
+        margin: 10px;
+        padding: 10px;
+        border-radius: 20px;
+
+        &:hover {
+          &>.text {
+            opacity: 1;
+            left: 8px;
+            z-index: 0;
+          }
+        }
+
+        .text {
+          width: 300px;
+          height: 300px;
+          position: absolute;
+          border: 2px solid;
           border-radius: 50%;
-          padding:20px;
+          padding: 15px;
+          top: 7px;
+          left: -40px;
+          background: rgba(0, 0, 0, .63);
+          color: white;
+          font-size: large;
+          text-align: center;
+          transition: all .5s;
+          opacity: 0;
+          display: grid;
+          place-items: center;
+
         }
-        p{
-          font-size:larger;
+
+        img {
+          border-radius: 50%;
+          padding: 20px;
+          object-fit: cover;
+          overflow: hidden;
+          width: 300px;
+          height: 300px;
         }
-        &:nth-child(1){
-          img{ border:4px solid red;}
-          p{
-            background:rgba(248, 71, 71,.23);
-            border-radius:20px;
-            padding:10px;
-            color:red;
+
+        p {
+          font-size: larger;
+        }
+
+        &:nth-child(1) {
+          img {
+            border: 4px solid violet;
+          }
+
+          p {
+            background: rgba(243, 10, 200, 0.23);
+            border-radius: 20px;
+            padding: 10px;
+            color: rgb(239, 26, 239);
           }
         }
-        &:nth-child(2){
-          img{ border:4px solid blue;}
-          p{
-            background:rgba(72, 72, 250,.23);
-            border-radius:20px;
-            padding:10px;
-            color:blue;
+
+        &:nth-child(2) {
+          img {
+            border: 4px solid rgb(119, 119, 250);
+          }
+
+          p {
+            background: rgba(72, 72, 250, .23);
+            border-radius: 20px;
+            padding: 10px;
+            color: blue;
           }
         }
-        &:nth-child(3){
-          img{ border:4px solid green;}
-          p{
-            background:rgba(68, 215, 68,.23);
-            border-radius:20px;
-            padding:10px;
-            color:green;
+
+        &:nth-child(3) {
+          img {
+            border: 4px solid rgb(139, 232, 139);
+          }
+
+          p {
+            background: rgba(68, 215, 68, .23);
+            border-radius: 20px;
+            padding: 10px;
+            color: green;
           }
         }
       }
     }
-}
+  }
 }
 
 .home-root {
@@ -383,13 +461,13 @@
 
     p {
       &:nth-child(1) {
-        font-size: 3vw;
+        font-size: clamp(2rem, 0.3043rem + 3.4783vw, 3rem);
         text-align: start;
         margin: 0;
       }
 
       &:nth-child(2) {
-        font-size: 1.2vw;
+        font-size: clamp(1rem, 0.3043rem + 3.4783vw, 1.2rem);
         text-align: start;
 
       }
@@ -407,7 +485,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 10px;
   padding: 50px;
   overflow: hidden;
 
@@ -453,10 +530,11 @@
   }
 
   .map {
-    img{
-      object-fit:cover;
-      animation:imgAnim 8s ease-in-out infinite;
+    img {
+      object-fit: cover;
+      animation: imgAnim 8s ease-in-out infinite;
     }
+
     .scanner {
       width: 250px;
       height: 250px;
@@ -466,7 +544,7 @@
       transition: all .5s;
       background: rgba(68, 217, 254, .4);
       opacity: 0;
-      animation:scanner1 8s ease-in-out infinite;
+      animation: scanner1 8s ease-in-out infinite;
     }
 
     .scanner::after {
@@ -482,63 +560,254 @@
     }
   }
 }
+
 @keyframes imgAnim {
-  0%{
+  0% {
     transform: translateX(150px);
     opacity: 0;
   }
-  20%,80%{
+
+  20%,
+  80% {
     transform: translateX(0px);
     opacity: 1;
   }
-  100%{
+
+  100% {
     transform: translateY(150px) scale(.5);
     opacity: 0;
   }
 }
+
 @keyframes scanner {
-  0%{
+  0% {
     transform: translateY(0px);
   }
-  50%{
+
+  50% {
     transform: translateY(250px);
   }
-  100%{
+
+  100% {
     transform: translateY(0px);
   }
 }
+
 @keyframes scanner1 {
-  0%,20%{
+
+  0%,
+  20% {
     opacity: 0;
   }
-  30%,70%{
+
+  30%,
+  70% {
     opacity: 1;
   }
-  80%,100%{
+
+  80%,
+  100% {
     opacity: 0;
   }
-  
+
 }
+
 @keyframes block {
-  0%,5%{
+
+  0%,
+  5% {
     transform: translateX(0px);
     opacity: 1;
   }
-  10%,40%{
+
+  10%,
+  40% {
     transform: translateX(-100px);
     opacity: 0;
   }
-  41%,69%{
+
+  41%,
+  69% {
     transform: translateX(150px);
   }
-  80%,100%{
+
+  80%,
+  100% {
     transform: translateX(0px);
     opacity: 1;
   }
-  
 }
+
+.steps-root {
+  height: auto;
+  display: grid;
+  align-items: center;
+  margin-bottom: 10px;
+
+  .step-container {
+    height: 100%;
+    display: grid;
+    align-items: center;
+    grid-auto-flow: column;
+    overflow-x: scroll;
+
+    .step {
+      width: 250px;
+      height: 250px;
+      border-radius: 50%;
+      border: 2px solid;
+      margin: 10px;
+      display: block;
+      padding: 10px;
+
+    }
+  }
+}
+
+.footer-root {
+  border: 2px solid rgb(202, 199, 199);
+  padding: 20px 0px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgba(0, 0, 0, .13);
+
+  .links {
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    width: 100%;
+    row-gap: 20px;
+    padding: 20px;
+    margin-bottom: 20px;
+
+    div {
+      display: grid;
+      place-items: center;
+      width: 200px;
+
+      p {
+        font-size: 18px;
+        letter-spacing: 2px;
+        text-align: center;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .divider {
+    border-top: 2px solid rgb(183, 181, 181);
+    width: 100%;
+    position: relative;
+    top: 25px;
+    margin: 0;
+    z-index: 0;
+  }
+
+  .icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+    background: white;
+    z-index: 1;
+    padding: 0px 10px;
+    border-radius: 20px;
+
+    i {
+      font-size: 30px;
+      border-radius: 50%;
+      padding: 5px 10px;
+      margin: 5px;
+
+      &:hover {
+        transform: scale(1);
+        transition: all .5s;
+
+        &:nth-child(1) {
+          color: white;
+          border: 2px solid blue;
+          background: blue;
+
+        }
+
+        &:nth-child(2) {
+          color: white;
+          background: black;
+        }
+
+        &:nth-child(3) {
+          color: white;
+          background: black;
+        }
+
+        &:nth-child(4) {
+          color: white;
+          background: rgb(14, 94, 254);
+          border: 2px solid rgb(14, 94, 254);
+
+        }
+
+        &:nth-child(5) {
+          color: white;
+          background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+          border: 2px solid radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+
+        }
+      }
+    }
+  }
+
+  .text {
+    width: 100vw;
+    margin: 0;
+    display: grid;
+    place-items: center;
+
+    .bottom-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        padding: 0px 5px;
+        font-size: 14px;
+
+        &:not(:last-child) {
+          border-right: 2px solid;
+        }
+      }
+    }
+  }
+}
+
+.container2 {
+  position: relative;
+
+  img {
+    z-index: 1;
+  }
+}
+
+.highlighted {
+  background-color: rgba(255, 0, 0, 0.5);
+  border: 2px solid;
+  z-index: 5;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 200px;
+  height: 200px;
+}
+
+
 /*mobile css */
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:780px) {
   .navbar-root {
     &>.icon-control {
       display: grid;
@@ -652,8 +921,7 @@
     }
 
     .logo {
-      width: 50vw;
-      grid-area: end;
+      display: none;
 
       p {
         font-size: large;
@@ -665,7 +933,67 @@
     }
 
     .profile {
-      display: none;
+      width: 50vw;
+    }
+  }
+
+  .home-root {
+    grid-template-areas: 'start' 'end';
+    place-items: start;
+    position: relative;
+    margin-bottom: 80px;
+
+    .container {
+      width: 100%;
+      padding-top: 50px;
+      margin: 0;
+    }
+
+    .image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100%;
+      display: grid;
+      place-items: center;
+    }
+
+    .text {
+      z-index: 1;
+      background: rgba(0, 0, 0, .63);
+      width: 100%;
+      height: 550px;
+      color: white;
+      padding: 15px;
+
+    }
+  }
+
+  .footer-root {
+    .icons {
+      padding: 0;
+
+      i {
+        font-size: 25px;
+      }
+    }
+
+    .text {
+      p {
+        font-size: 11px;
+      }
+
+      .bottom-links {
+        p {
+          padding: 0px 5px;
+          font-size: 10px;
+
+          &:not(:last-child) {
+            border-right: 1px solid;
+          }
+        }
+      }
     }
   }
 }
