--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -275,11 +275,13 @@
     position: absolute;
     left: 0;
     top: 100px;
-    background: rgba(255, 255, 255, 0.83);
+    background: #e0e0e0;
     padding: 20px 0px;
     z-index: 10;
     color: black;
-
+    
+    box-shadow: inset 12px 12px 17px #747474,
+            inset -12px -12px 17px #ffffff;
 
     .logo {
       width: 100%;
