--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -10,18 +10,19 @@
 
 .register-root {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: grid;
   justify-content: center;
   align-items: center;
 
   .form {
     width: 350px;
-    height: 400px;
-    border: 2px solid red;
+    height: auto;
     align-items: center;
+    justify-content: center;
     display: grid;
     position: relative;
+    padding:40px;
 
     &>.icon-control {
       justify-content: center;
@@ -62,27 +63,37 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 2px solid;
         position: relative;
         height: 70px;
 
+        &:nth-child(4){
+          label{
+            left:45px;
+          }
+          .icon-control{
+            &:nth-child(4){
+              position: absolute;
+              right:0px;
+              border:none;
+            }
+          }
+        }
         label {
           position: absolute;
-          left: 40px;
+          left: 45px;
           background: white;
-          transition: all .5s ease-in-out;
+          color:gray;
         }
-
+        label.focused{
+          color:red;
+          transform: translateY(-24px);
+          transition: all .5s;
+        }
         input {
           width: 18em;
           height: 40px;
-
-          &:focus::placeholder {
-            transform: translateY(-20px);
-            font-size: .8em;
-            transition: all .5s;
-          }
         }
+        
 
         .icon-control {
           i {
@@ -91,17 +102,25 @@
           }
 
         }
-
+        
         .icon-control {
           justify-content: center;
           display: grid;
           align-items: center;
-          border: 2px solid;
+          border: 1px solid;
+          border-right: none;
           text-align: center;
           width: 40px;
-          height: 40px;
+          height: 44px;
         }
       }
+    }
+    button{
+      font-size: large;
+      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      letter-spacing: 2px;
+      width:200px;
+      height: 50px;
     }
   }
 
@@ -279,7 +298,6 @@
     padding: 20px 0px;
     z-index: 10;
     color: black;
-    
     box-shadow: inset 12px 12px 17px #747474,
             inset -12px -12px 17px #ffffff;
 
@@ -659,7 +677,8 @@
       border-radius: 50%;
       border: 2px solid;
       margin: 10px;
-      display: block;
+      display: grid;
+      place-items: center;
       padding: 10px;
 
     }
