--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -98,7 +98,7 @@
       place-items: center;
       row-gap: 10px;
 
-      &.input-control {
+      .input-control {
         &:nth-child(3) {
 
           &.icon-control {
@@ -121,6 +121,7 @@
         input {
           width: 36em;
           height: 40px;
+          outline: none;
         }
       }
 
@@ -144,7 +145,6 @@
         }
 
         label {
-          color: rgb(61, 61, 61);
         }
       }
 
@@ -154,14 +154,23 @@
         align-items: center;
         position: relative;
         height: 70px;
-
+        column-gap: 7px;
+        padding-bottom: 10px;
+        
+        p{
+          font-size:.8em;
+          position: absolute;
+          top:43px;
+          left:10px;
+          color:red;
+        }
         &:nth-child(4) {
           label {
             left: 5px;
           }
 
           .icon-control {
-            &:nth-child(3) {
+            &:nth-child(4) {
               position: absolute;
               right: 0px;
               border: none;
@@ -182,11 +191,10 @@
           font-size: .9em;
           transition: all .5s;
         }
-
         input {
           width: 18em;
           height: 40px;
-
+          outline:none;
           &:focus {
             border-color: rgb(41, 111, 251);
             outline: none;
@@ -214,18 +222,68 @@
         }
       }
 
+      
       button {
+        font-family: inherit;
         font-size: 18px;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        letter-spacing: 2px;
-        width: 200px;
-        height: 40px;
+        background: royalblue;
+        color: white;
+        padding: 0.7em 1em;
+        padding-left: 0.9em;
+        display: flex;
+        align-items: center;
+        border: none;
+        border-radius: 16px;
+        overflow: hidden;
+        transition: all 0.2s;
+        cursor: pointer;
       }
+      
+      button span {
+        display: block;
+        margin-left: 0.3em;
+        transition: all 0.3s ease-in-out;
+      }
+      
+      button svg {
+        display: block;
+        transform-origin: center center;
+        transition: transform 0.3s ease-in-out;
+      }
+      
+      button:hover .svg-wrapper {
+        animation: fly-1 0.6s ease-in-out infinite alternate;
+      }
+      
+      button:hover svg {
+        transform: translateX(1.2em) rotate(45deg) scale(1.1);
+      }
+      
+      button:hover span {
+        transform: translateX(5em);
+      }
+      
+      button:active {
+        transform: scale(0.95);
+      }
+      
+      @keyframes fly-1 {
+        from {
+          transform: translateY(0.1em);
+        }
+      
+        to {
+          transform: translateY(-0.1em);
+        }
+      }
+      
     }
   }
 
   .step-symbols {
-    border: 2px solid;
+    border: 2px solid rgb(178, 177, 177);
+    padding: 5px 10px;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -242,6 +300,7 @@
       font-size: small;
       font-weight: 700;
       color: darkgray;
+      outline-offset: 5px;
     }
 
     &>p:nth-child(even) {
@@ -1392,6 +1451,8 @@
       }
 
       &:nth-child(2) {
+        border-radius:20px;
+        padding-bottom: 10px;
         transform: scale(0.9);
 
         .form-group {
