--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -7,6 +7,12 @@
   overflow-x: hidden;
 }
 
+
+::-webkit-scrollbar-button{
+  background: gray;
+  border-radius: 10px;
+}
+
 .register-root {
   width: 100%;
   height: 100%;
@@ -1403,7 +1409,14 @@
       display: grid;
       place-items: center;
       padding: 10px;
+      background: rgba(255,255,255,.43);
 
+      h2{
+        margin:0;
+      }
+      p{
+        margin: 0;
+      }
     }
   }
 }
