--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,10 +1,10 @@
-/*.app{
+.app{
   display: grid;
   place-items: center;
   width: 100vw;
   height: auto;
 }
-
+/*
 .land-inspector {
   max-width: 800px;
   margin: 0 auto;
@@ -92,21 +92,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 80vh;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
   font-family: 'Arial', sans-serif;
   color: #fff;
 }
 
 .land-inspector {
-  width: 80%;
+  width: 70%;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 20px;
   box-sizing: border-box;
-  margin: 20px auto; /* Center the component horizontally */
+  margin: 20px auto;
 }
 
 .land-inspector h2 {
